--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "formik": "^2.2.6",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-contenteditable": "^3.3.5",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
