--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase-admin": "^9.4.2",
     "firebaseui": "^4.7.1",
     "formik": "^2.2.6",
+    "immutability-helper": "^3.1.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-contenteditable": "^3.3.5",
